Fixed: Fixed sidebar and sidebar action on mobile

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -2,7 +2,7 @@
 
 .shown {
     transform: translateY(74);
-    z-index: 10
+    z-index: 50
 
 }
 
